# DevMate

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.env.example  config.docker.toml  config.toml  docker-compose.yml  pyproject.toml  项目计划.md
.docker-temp/: .token_seed
.docker-temp/buildx/: .buildNodeID
.skills/: README.md
.skills/build-demo-map-website/: SKILL.md
.skills/build-map-website/: SKILL.md
.skills/build-static-site/: SKILL.md
.skills/frontend-design/: SKILL.md  visual-notes.md
.skills/mcp-server/: SKILL.md
.skills/package-docker-delivery/: SKILL.md
.skills/webapp-testing/: SKILL.md  checklist.md
docs/: architecture.md  deepagents_migration_plan.md  docker_delivery_checklist.md  internal_backend_guidelines.md  internal_frontend_guidelines.md  mcp_integration_playbook.md  skills_workflow.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
src/devmate/: __main__.py  agent_runtime.py  config_loader.py  deepagents_runtime.py  logging_config.py  main.py  mcp_client.py  mcp_server.py  observability.py  planning_agent.py  project_generator.py  rag_pipeline.py  web_app.py  (+3 more)
tests/: test_agent_runtime.py  test_config_loader.py  test_deepagents_runtime.py  test_main.py  test_mcp_components.py  test_observability.py  test_planning_agent.py  test_project_generator.py  test_rag_pipeline.py  test_search_policy.py  test_skill_registry.py  test_web_app.py
(+56 files in other folders)
