[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "devmate"
version = "0.1.0"
description = "DevMate interview project skeleton"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Neuclic" }
]
dependencies = [
  "chromadb>=1.0.0",
  "httpx>=0.28.0",
  "langchain>=1.2.10",
  "langchain-community>=0.3.0",
  "langchain-mcp-adapters>=0.1.0",
  "langchain-openai>=0.3.0",
  "mcp>=1.0.0",
  "typer>=0.16.0"
]

[project.scripts]
devmate = "devmate.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/devmate"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-workspace-temp -o cache_dir=.pytest-workspace-cache"
